<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#A0D9F2"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_10_km"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_15_min"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/textViewFare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fare_50_dh"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/textViewTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_2024_12_18"
            android:textColor="#7E7676"
            android:textSize="12sp"
            android:layout_marginTop="8dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
