<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="@drawable/background_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="70dp"
        android:drawableLeft="@drawable/baseline_arrow_forward_24"
        android:drawablePadding="8dp"
        android:drawableTint="@color/white"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Logo -->
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/taxi_logo"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logo_description" />

    <!-- Username Field -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:textColor="#333"
        android:textColorHint="#999"/>

    <!-- Password Field -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:textColor="#333"
        android:textColorHint="#999"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textStyle="bold"
        android:backgroundTint="#A0D9F2"
        android:textColor="#7E7E7E"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:textStyle="bold"
        android:backgroundTint="#00A0D9F2"
        android:textColor="#7E7E7E"
        android:layout_gravity="center"/>

</LinearLayout>
